<resources>
    <string name="app_name">Knowledge App 01</string>
    <string name="title_home">Home</string>
    <string name="title_box">Box</string>
    <string name="title_card">Card</string>
    <string name="title_learn">Learn</string>
    <string name="log_out">Log Out</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Log In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_email_1">Type your Email</string>
    <string name="type_your_password_1">Type Your Password</string>
    <string name="retype_your_password_2">Retype Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="box_name">Box Name</string>
    <string name="box_content">Box Content</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="a_Boxcard">a</string>
    <string name="_boxcard">b</string>
    <string name="boxen">Boxes</string>
    <string name="build_box">Build Box</string>
    <string name="box_content_input">Box Content</string>
    <string name="box_name_input">Box Name</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="add_box">Add Box</string>
    <string name="card_add">Card Build</string>
    <string name="a_card">A</string>
    <string name="b_card">B</string>
    <string name="edit_card">Edit Card</string>
    <string name="update_card">Update</string>
    <string name="b_card_edit">B</string>
    <string name="a_card_edit">A</string>
    <string name="card_add_titel">Card Add</string>
    <string name="learn_card_from_box">Learn Card from Box</string>
    <string name="ok_learn">OK</string>
    <string name="again_learn">Again</string>
    <string name="learn_cards_from_box">Learn Cards from Box</string>
    <string name="learn">Learn</string>
    <string name="delet_Card">Card deleted</string>
    <string name="save_Card">Card saved</string>
    <string name="no_delet_Card">no Card deleted</string>
    <string name="delet_Box">Box deleted</string>
    <string name="no_delet_Box">no Box deleted</string>
    <string name="no_save_Card">no Card saved</string>
    <string name="save_Box">Box saved</string>
    <string name="no_save_Box">no Box saved</string>
    <string name="no_update_card">no Card update</string>
    <string name="update_box">Box update</string>
    <string name="no_update_box">no Box updated</string>
    <string name="wissen_app_01">Knowledge App 0.1</string>
    <string name="inspiriert_durch_frieda_schreiber">inspired by Frieda Schreiber</string>
    <string name="gib_das_was_dir_wichtig_ist_nicht_auf_nur_weil_es_nicht_einfach_ist">„do not give up what is important to you just because it is not easy“</string>
    <string name="ok_card">Card is learned</string>
    <string name="again_card">Card is not learned</string>
    <string name="input_mai_passwprd">Empty fields are not allowed !</string>
    <string name="input_mail_password">Empty fields are not allowed !</string>
    <string name="fail_password">Password is wrong</string>
    <string name="logout_app_title">Log Out App ?</string>
    <string name="logout_message">Are you sure to leave the App ?</string>
    <string name="button_leave_app">End !</string>
    <string name="button_stay_app">Stay !</string>
    <string name="by_dennis_sand">by Dennis Sand</string>
    <string name="home">Home</string>
    <string name="albert_einstein_1879_1955">Albert Einstein 1879 - 1955</string>
    <string name="logo">Logo</string>
    <string name="edit_button_content">Edit Button</string>
    <string name="delet_button_content">Delet Button</string>
    <string name="card_symbole_content">Card Symbole</string>
    <string name="green_hook_symbole_content">Green Hook Symbole</string>

</resources>